@@ -1,3 +1,7 @@
+2012-12-19  Charles Turner  <chturne@gmail.com>
+
+	* LispLanguage.java (unitNamespace): Moved here from Scheme class.
+
 2012-11-11  Per Bothner  <per@bothner.com>
 
 	* LangObjType.java (compare): Add test for nullType.
